maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:34: error: ';' expected but 'else' found.
    } else {
      ^IslandMaze:54: error: expected class or object definition
    if(estFaceMur()){
    ^IslandMaze:74: error: Unmatched closing brace '}' ignored here
  } 
  ^IslandMaze:77: error: eof expected but '}' found.
}
^